Closed Bug 530931 Opened 16 years ago Closed 16 years ago

Maemo shouldn't use the true DPI

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta5-fixed
fennec 1.0+ ---

People

(Reporter: mfinkle, Assigned: mfinkle)

References

Details

Attachments

(1 file)

Trying to use the true DPI on Maemo (bug 449283) has created some problems that really can't be worked around (bug 527750). The best solution is to _not_ use the true DPI in the platform and to instead use the reported GTK DPI (96 in this case). The result will allow fonts to render in an appropriate size, in relation to the surrounding elements. The fonts will not render at the correct physical size, but that isn't desired anyway. I have a patch that restores the previous DPI algorithm, but keeps the refactoring completed in bug 449283. The patch working it's way through the Try server. If it works out, I'll attach it for review.
blocking a fennec blocker (bug 527750)
Flags: blocking1.9.2?
Attached patch patch — — Splinter Review
This patch reverts the DPI setting to the previous "whatever gtk says" method. It removes the concept of the PlatformDPI, which was only used because the system fonts wanted to be based off of 96 DPI, not the device DPI. The patch removes the caching of the MaemoClassic flag from gfxPatformGTK and puts it in nsLookAndFeel, where it is used anyway. The patch does not completely revert the code refactoring that was done to cleanup the DPI access methods. Using this patch (which passes try server) and a tweaked Fennec chrome UI stylesheet, the font size issue found in bug 527750 fixed.
Assignee: nobody → mark.finkle
Attachment #414442 - Flags: review?(roc)
tracking-fennec: --- → 1.0+
Flags: blocking1.9.2? → blocking1.9.2+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Depends on: 612978
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: