Bug 530931: Maemo shouldn't use the true DPI [r=roc]